# djinni

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  Makefile  README.Python.md  README.md  common.gypi  mac-build-support-lib.sh
cmake/: ios.toolchain.cmake
djinni/: .gitignore  ReadMe.txt  build  build.sbt  run-assume-built
example/: Makefile  README.md  example.djinni  example.yaml  glob.py  libtextsort.gyp  local.properties.sample  run_djinni.sh  run_py_example.sh
example/android/: .gitignore  build.gradle
example/android/app/: build.gradle
example/generated-src/cffi/: pycffi_lib_build.py
example/generated-src/cpp/: item_list.hpp  sort_items.hpp  sort_order.hpp  textbox_listener.hpp  textbox_reset_listener.hpp
example/generated-src/cwrapper/: cw__sort_items.cpp  cw__sort_items.h  cw__sort_items.hpp  cw__textbox_listener.cpp  cw__textbox_listener.h  cw__textbox_listener.hpp  dh__item_list.cpp  dh__item_list.h  dh__item_list.hpp  dh__list_string.cpp  dh__list_string.h  dh__list_string.hpp  dh__sort_order.cpp  dh__sort_order.h  dh__sort_order.hpp
example/generated-src/jni/: NativeItemList.cpp  NativeItemList.hpp  NativeSortItems.cpp  NativeSortItems.hpp  NativeSortOrder.hpp  NativeTextboxListener.cpp  NativeTextboxListener.hpp  NativeTextboxResetListener.cpp  NativeTextboxResetListener.hpp
example/generated-src/objc/: TXSItemList+Private.h  TXSItemList+Private.mm  TXSItemList.h  TXSItemList.mm  TXSSortItems+Private.h  TXSSortItems+Private.mm  TXSSortItems.h  TXSSortItems.mm  TXSSortItemsCppProxy+Private.h  TXSSortItemsCppProxy.h  TXSSortItemsCppProxy.mm  TXSSortOrder+Private.h  TXSSortOrder.h  TXSSortOrderTranslator+Private.h  TXSSortOrderTranslator.mm  TXSTextboxListener+Private.h  TXSTextboxListener+Private.mm  TXSTextboxListener.h  TXSTextboxListener.mm  TXSTextboxListenerObjcProxy+Private.h  TXSTextboxListenerObjcProxy.mm  TXSTextboxResetListener+Private.h  TXSTextboxResetListener+Private.mm  TXSTextboxResetListener.h  TextSort-Bridging-Header.h
example/generated-src/python/: item_list.py  (+5 more)
example/localhost/: CMakeLists.txt  Dockerfile  README.md  build.xml  run_in_docker.sh
example/localhost/handwritten-src/java/com/dropbox/textsort/: SortTest.java
example/python/: textsort.py
extension-libs/jni-exceptions/: custom_exception_type.cpp
extension-libs/platform-threads/: platform-threads.gyp
intellij-plugin/: .gitignore  README.md
src/: .gitignore  build  build.sbt  run  run-assume-built
src/project/: plugins.sbt
src/source/: BaseObjcGenerator.scala  CWrapperGenerator.scala  CWrapperMarshal.scala  CffiGenerator.scala  CppGenerator.scala  CppMarshal.scala  CxCppGenerator.scala  CxCppMarshal.scala  CxGenerator.scala  CxMarshal.scala  JNIGenerator.scala  JNIMarshal.scala  JavaGenerator.scala  JavaMarshal.scala  Main.scala  Marshal.scala  ObjcGenerator.scala  ObjcMarshal.scala  ObjcppGenerator.scala  ObjcppMarshal.scala  PythonGenerator.scala  PythonMarshal.scala  QmlGenerator.scala  QmlMarshal.scala  SwiftBridgingHeaderGenerator.scala  SwiftGenerator.scala  YamlGenerator.scala  ast.scala  generator.scala  meta.scala  parser.scala  resolver.scala  writer.scala
src/support/: sbt  sbt.resolvers.properties  sbt.security.policy
support-lib/: CMakeLists.txt  djinni_common.hpp  ios-build-support-lib.sh  project_export.hpp  proxy_cache_impl.hpp  proxy_cache_interface.hpp  support_lib.gyp
support-lib/cpp/: either.hpp
support-lib/cwrapper/: thread_local.cpp  thread_local.hpp  wrapper_marshal.cpp  wrapper_marshal.h  wrapper_marshal.hpp
support-lib/cx/: CppWrapperCache.h  CxWrapperCache.h  Marshal.h
support-lib/include/djinni/jni/: Marshal.hpp  djinni_support.hpp
support-lib/include/djinni/objc/: DJICppWrapperCache+Private.h  DJIObjcWrapperCache+Private.h
support-lib/java/com/dropbox/djinni/: NativeLibLoader.java
support-lib/java/com/wattpad/util/: Either.java
support-lib/jni/: HBinary.hpp  HBool.hpp  HDate.hpp  HEither.hpp  HF64.hpp  HI16.hpp  HI32.hpp  HI64.hpp  HI8.hpp  HIteJniInfo.hpp  HList.hpp  HMap.hpp  HOptional.hpp  HSet.hpp  HString.hpp  Marshal.hpp  Primitive.hpp  djinni_main.cpp  djinni_support.cpp  djinni_support.hpp
support-lib/objc/: DJICppWrapperCache+Private.h  DJIDate.h  DJIDate.mm  DJIError.h  DJIError.mm  DJIMarshal+Private.h  DJIObjcWrapperCache+Private.h  DJIProxyCaches.mm  DJIWeakPtrWrapper+Private.h  DJIWeakPtrWrapper.mm  WPEither.h  WPEither.m
support-lib/py/djinni/: __init__.py  exception.py  pycffi_marshal.py  support.py
support-lib/src/: proxy_cache_impl.hpp
support-lib/src/jni/: djinni_main.cpp  djinni_support.cpp
support-lib/src/objc/: DJIError.mm  DJIProxyCaches.mm
test-suite/: Makefile  PyCFFI-deprecated.mk  PyCFFI.mk  README.md  run_djinni.sh  run_py_djinni.sh  test_all_djinni4python.sh
test-suite/djinni/: all.djinni  client_interface.djinni  common.djinni  constant_enum.djinni  constants.djinni  date.djinni  date.yaml  derivings.djinni  duration.djinni  duration.yaml  enum.djinni  enum_flags.djinni  exception.djinni  extended_record.djinni  foo_client_interface.djinni  foo_constants.djinni  foo_containers.djinni  foo_duplicate_file_creation.djinni  foo_enum_interface.djinni  foo_interface.djinni  foo_listener.djinni  foo_listener_bf.djinni  foo_primitives.djinni  foo_receiver.djinni  foo_static.djinni  interface_inheritance.djinni  inttypes.djinni  listeners.djinni  map.djinni  multiple_inheritance.djinni  nested_collection.djinni  parcelable.djinni  primitive_list.djinni  primtypes.djinni  properties.djinni  py_all.djinni  relative_paths.djinni  set.djinni  single_language_interfaces.djinni  test.djinni  (+5 more)
test-suite/generated-src/: inFileList.txt  outFileList.txt
test-suite/java/: .gitignore  CMakeLists.txt  Makefile  build.xml  fixdep.sh
test-suite/java/docker/: README.md  build_and_run_tests.sh  run_dockerized_test.sh
test-suite/java/docker/centos_6/: Dockerfile
test-suite/java/docker/debian_jessie/: Dockerfile
test-suite/java/docker/fedora_24/: Dockerfile
test-suite/java/docker/ubuntu_trusty/: Dockerfile
test-suite/java/docker/ubuntu_utopic/: Dockerfile
tools/: format_whitespace
(+1291 files in other folders)
